test/expected/config-error.out
cdecl> typedef int
                  ^
data/config_err-1.cdeclrc:1,12: syntax error: unexpected end of command
